# lb-history-importer

./: Cargo.toml  README.md  rustfmt.toml
app/: Cargo.toml
app/src/: args.rs  main.rs  spotify_data.rs
core/: Cargo.toml
core/src/: lib.rs
derive/: Cargo.toml
derive/src/: data.rs  helper_attr.rs  lib.rs  payload.rs
derive/src/payload/: attributes.rs  fields.rs
derive/tests/ui/: field-duplicate-attr.rs  field-duplicate-attr.stderr  field-multiple-with-same-attr.rs  field-multiple-with-same-attr.stderr  field-payload-disallowed.rs  field-payload-disallowed.stderr  outer-invalid.rs  outer-invalid.stderr  outer-multiple.rs  outer-multiple.stderr
services/: Cargo.toml
services/src/: de.rs  lib.rs  service.rs
services/src/service/: listenbrainz.rs  spotify.rs
services/src/service/listenbrainz/: tests.rs
services/src/service/spotify/: tests.rs
src/: main.rs  spotify_data.rs
