[package]
name = "spotify-importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.29", features = ["derive", "env"] }
listenbrainz = "0.5.0"
serde = "1.0.148"
serde_json = "1.0.89"
uuid = { version = "1.2.2", features = ["serde"] }
wild = "2.1.0"

[patch.crates-io]
listenbrainz = { path = "../listenbrainz-rs" }
