[workspace]
members = [
    "app",
    "core",
    "derive",
    "services",
]

[workspace.package]
version = "0.2.1"
authors = ["Michael Ziminsky (Z)"]
edition = "2021"
license = "LGPL-3.0-or-later"

[workspace.dependencies]
listenbrainz = "0.6.0"

[patch.crates-io]
listenbrainz = { path = "../listenbrainz-rs" }
