[package]
name = "lb-history-importer"
description = "Import listen data from dump files to a listenbrainz compatible service"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lb_importer_services = { path = "../services" }

anyhow = "1"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.32", features = ["derive", "env"] }
listenbrainz.workspace = true
serde = "1"
serde_json = "1"
uuid = { version = "1.2.2", features = ["serde"] }
wild = "2"
