[package]
name = "lb_importer_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
lb_importer_core = { path = "../core", version = "0.1.0" }

darling = "0.14.2"
quote = "1"
syn = "1"

[dev-dependencies]
listenbrainz = "0.5.0"
