[package]
name = "lb_importer_derive"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
lb_importer_core = { path = "../core" }

darling = "0.14.2"
quote = "1"
syn = "1"
