[package]
name = "lb_importer_services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lb_importer_core = { path = "../core", version = "0.1.0" }
lb_importer_derive = { path = "../derive", version = "0.1.0" }

chrono = { version = "0.4.23", features = ["serde"] }
listenbrainz = "0.5.0"
serde = "1.0.150"
serde_json = "1.0.89"
