[package]
name = "lb_importer_services"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lb_importer_core = { path = "../core" }
lb_importer_derive = { path = "../derive" }

anyhow = "1"
chrono = { version = "0.4.23", features = ["serde"] }
listenbrainz.workspace = true
regex = "1"
serde = "1"
serde_json = "1"
serde_with = "2.1.0"
